# vulkan-khr-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/scenes/: shadow_test.glb
data/shaders/common/: camera_perspective.glsl  common.glsl  random.glsl
data/shaders/post_processing/: display_quad.frag  display_quad.vert
data/shaders/rtsimple/: common.glsl  shadow.rmiss  simple.rahit  simple.rchit  simple.rgen  simple.rmiss
data/shaders/sampler_zoo/: common.glsl  sampler_zoo.rahit  sampler_zoo.rchit  sampler_zoo.rgen  sampler_zoo.rmiss  sampler_zoo_shadow.rmiss
src/: Common.h  ProjectBase.h.in  Resources.h  SceneLoader.cpp  SceneLoader.h  VulkanKHRRaytracer.cpp  VulkanKHRRaytracer.h  main.cpp
src/api/: RaytracingDevice.cpp  RaytracingDevice.h  RaytracingPipeline.cpp  RaytracingPipeline.h  RenderDevice.cpp  RenderDevice.h  Swapchain.cpp  Swapchain.h  Window.cpp  Window.h
src/camera/: Camera.cpp  Camera.h  PerspectiveCamera.h
src/scene/: SceneLoader.cpp  SceneLoader.h  ScenePresenter.cpp  ScenePresenter.h  SimpleRaytracingPipeling.cpp  SimpleRaytracingPipeling.h
src/scene/pipelines/: BasicRaytracingPipeline.cpp  SamplerZooPipeline.cpp  SamplerZooPipeline.h
